# llm-agent-thesis

.claude/: settings.local.json
CREWAI/startup/: README.md  pyproject.toml  report.md
CREWAI/startup/docs/: DEVELOPMENT_ROADMAP.md
CREWAI/startup/src/mcp_servers/: __init__.py  brightness_server.py  test_servers.py  video_filter_server.py  volume_server.py
CREWAI/startup/src/startup/: crew.py  main.py
CREWAI/startup/src/startup/config/: agents.yaml  tasks.yaml
毕设论文/: CLAUDE.md  ~$报告-侯林宝.docx  周报.docx  开题报告-侯林宝.docx
