[project]
name = "startup"
version = "0.1.0"
description = "startup using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.2"
]

[project.scripts]
startup = "startup.main:run"
run_crew = "startup.main:run"
train = "startup.main:train"
replay = "startup.main:replay"
test = "startup.main:test"
run_with_trigger = "startup.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
